2009-11-30  Donal K. Fellows  <dkf@users.sf.net>

	* doc/Tcl.n: [Bug 2901433]: Improved description of expansion to
	mention that it is using list syntax.

2009-11-27  Donal K. Fellows  <dkf@users.sf.net>

	* doc/BoolObj.3, doc/CrtChannel.3, doc/DictObj.3, doc/DoubleObj.3: 
	* doc/Ensemble.3, doc/Environment.3, doc/FileSystem.3, doc/Hash.3: 
	* doc/IntObj.3, doc/Limit.3, doc/ObjectType.3, doc/PkgRequire.3: 
	* doc/SetChanErr.3, doc/SetResult.3: [Patch 2903921]: Many small
	spelling fixes from Larry Virden.

2009-11-25  Stuart Cassoff  <stwo@users.sf.net>

	* unix/configure.in:	[Patch 2892871]: Remove unneeded
	* unix/tcl.m4:		AC_STRUCT_TIMEZONE and use
	* unix/tclConfig.h.in:	AC_CHECK_MEMBERS([struct stat.st_blksize])
	* unix/tclUnixFCmd.c:	instead of AC_STRUCT_ST_BLKSIZE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-16  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclEncoding.c: Fix [Bug 2891556] and improve test to detect
	* tests/econding.test:   similar manifestations in the future.
	
2009-11-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* changes:	Update for 8.5.8 release.

	* generic/tclClock.c (TclClockInit):	Do not create [clock] support
	commands in safe interps.

	* tests/io.test:	New test io-53.11 to test for [Bug 2895565].

2009-11-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): [Bug 2895565]. Dropped bogosity
	which used the number of _written_ bytes or character to update
	the counters for the read bytes/characters. See last entry for the
	test case.

2009-11-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/fCmd.test:     Fixed a number of issues for Vista
	* tests/registry.test: and Win7 that are due to restricted
	* tests/winFCmd.test:  permissions.

2009-11-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Update the URL syntax check to
	RFC 3986 compliance on the subject of non-encoded question mark