@@ -1,3 +1,8 @@
+2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>
+
+    * tools/genStubs.tcl    Add support for win32 CALLBACK functions
+                            (needed for Tk bugfix)
+
 2009-11-30  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/Tcl.n: [Bug 2901433]: Improved description of expansion to
